DSL_I/src/main/java/gen/GravITyParser.java
package gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GravITyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, NUMBER=79, INTEGER=80, 
		FLOAT=81, IDENTIFIER=82, COMMENT=83, WS=84;
	public static final int
		RULE_simulation = 0, RULE_simulation_body = 1, RULE_physics_module = 2, 
		RULE_collision = 3, RULE_movers_list = 4, RULE_mover = 5, RULE_mover_properties = 6, 
		RULE_electrostatic_field = 7, RULE_particle_radius_expr = 8, RULE_flux_resolution_expr = 9, 
		RULE_drag_force = 10, RULE_mover_color_expr = 11, RULE_drag_coefficient_expr = 12, 
		RULE_liquid_color_expr = 13, RULE_attraction_force = 14, RULE_mover1_expr = 15, 
		RULE_mover2_expr = 16, RULE_wave = 17, RULE_start_angle_expr = 18, RULE_angle_velocity_expr = 19, 
		RULE_amplitude_expr = 20, RULE_frequency_expr = 21, RULE_phase_shift_expr = 22, 
		RULE_uniform_motion = 23, RULE_mover_expr = 24, RULE_initial_speed_expr = 25, 
		RULE_accelerated_motion = 26, RULE_initial_acceleration_expr = 27, RULE_circular_motion = 28, 
		RULE_radius_expr = 29, RULE_angular_speed_expr = 30, RULE_ball_expr = 31, 
		RULE_gravity = 32, RULE_earth_expr = 33, RULE_moon_expr = 34, RULE_spring = 35, 
		RULE_spring_constant_expr = 36, RULE_damping_expr = 37, RULE_spring_rest_length_expr = 38, 
		RULE_floor_friction_expr = 39, RULE_spring_expr = 40, RULE_x_anchor_position_expr = 41, 
		RULE_y_anchor_position_expr = 42, RULE_num_coils_expr = 43, RULE_pendulum = 44, 
		RULE_length_expr = 45, RULE_ball_radius_expr = 46, RULE_initial_angle_expr = 47, 
		RULE_angular_velocity_expr = 48, RULE_angular_acceleration_expr = 49, 
		RULE_air_resistance_expr = 50, RULE_rolling_uphill = 51, RULE_gravitational_acceleration_expr = 52, 
		RULE_coefficient_of_friction_expr = 53, RULE_bounciness_expr = 54, RULE_angle_expr = 55, 
		RULE_velocity_along_incline_expr = 56, RULE_mover_basic_properties = 57, 
		RULE_mass_expr = 58, RULE_velocity_expr = 59, RULE_x_velocity_expr = 60, 
		RULE_y_velocity_expr = 61, RULE_position_expr = 62, RULE_x_position_expr = 63, 
		RULE_y_position_expr = 64, RULE_color_expr = 65, RULE_red_value_expr = 66, 
		RULE_green_value_expr = 67, RULE_blue_value_expr = 68, RULE_value_expr = 69, 
		RULE_simple_value = 70, RULE_conditional_value = 71, RULE_loop_value = 72, 
		RULE_initial_value = 73, RULE_multiplier = 74, RULE_condition = 75, RULE_comparator = 76, 
		RULE_reference = 77;
	private static String[] makeRuleNames() {
		return new String[] {
			"simulation", "simulation_body", "physics_module", "collision", "movers_list", 
			"mover", "mover_properties", "electrostatic_field", "particle_radius_expr", 
			"flux_resolution_expr", "drag_force", "mover_color_expr", "drag_coefficient_expr", 
			"liquid_color_expr", "attraction_force", "mover1_expr", "mover2_expr", 
			"wave", "start_angle_expr", "angle_velocity_expr", "amplitude_expr", 
			"frequency_expr", "phase_shift_expr", "uniform_motion", "mover_expr", 
			"initial_speed_expr", "accelerated_motion", "initial_acceleration_expr", 
			"circular_motion", "radius_expr", "angular_speed_expr", "ball_expr", 
			"gravity", "earth_expr", "moon_expr", "spring", "spring_constant_expr", 
			"damping_expr", "spring_rest_length_expr", "floor_friction_expr", "spring_expr", 
			"x_anchor_position_expr", "y_anchor_position_expr", "num_coils_expr", 
			"pendulum", "length_expr", "ball_radius_expr", "initial_angle_expr", 
			"angular_velocity_expr", "angular_acceleration_expr", "air_resistance_expr", 
			"rolling_uphill", "gravitational_acceleration_expr", "coefficient_of_friction_expr", 
			"bounciness_expr", "angle_expr", "velocity_along_incline_expr", "mover_basic_properties", 
			"mass_expr", "velocity_expr", "x_velocity_expr", "y_velocity_expr", "position_expr", 
			"x_position_expr", "y_position_expr", "color_expr", "red_value_expr", 
			"green_value_expr", "blue_value_expr", "value_expr", "simple_value", 
			"conditional_value", "loop_value", "initial_value", "multiplier", "condition", 
			"comparator", "reference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'simulation'", "'{'", "'}'", "'collision'", "'mover'", "'electrostatic_field'", 
			"'particle_radius'", "':'", "'flux_resolution'", "'drag_force'", "'mover_color'", 
			"'drag_coefficient'", "'liquid_color'", "'attraction_force'", "'mover1'", 
			"'mover2'", "'wave'", "'start_angle'", "'angle_velocity'", "'amplitude'", 
			"'frequency'", "'phase_shift'", "'uniform_motion'", "'initial_speed'", 
			"'accelerated_motion'", "'initial_acceleration'", "'circular_motion'", 
			"'radius'", "'angular_speed'", "'ball'", "'gravity'", "'earth'", "'moon'", 
			"'spring'", "'spring_constant'", "'damping'", "'spring_rest_length'", 
			"'floor_friction'", "'x_anchor_position'", "'y_anchor_position'", "'num_coils'", 
			"'pendulum'", "'length'", "'ball_radius'", "'initial_angle'", "'angular_velocity'", 
			"'angular_acceleration'", "'air_resistance'", "'rolling_uphill'", "'gravitational_acceleration'", 
			"'coefficient_of_friction'", "'bounciness'", "'angle'", "'velocity_along_incline'", 
			"'mass'", "'velocity'", "'x_velocity'", "'y_velocity'", "'position'", 
			"'x_position'", "'y_position'", "'color'", "'red_value'", "'green_value'", 
			"'blue_value'", "'if'", "'then'", "'else'", "'repeat'", "'times'", "'*'", 
			"'>'", "'<'", "'=='", "'>='", "'<='", "'!='", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "NUMBER", "INTEGER", "FLOAT", 
			"IDENTIFIER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GravITy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GravITyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimulationContext extends ParserRuleContext {
		public Simulation_bodyContext simulation_body() {
			return getRuleContext(Simulation_bodyContext.class,0);
		}
		public SimulationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simulation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterSimulation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitSimulation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitSimulation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimulationContext simulation() throws RecognitionException {
		SimulationContext _localctx = new SimulationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_simulation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__0);
			setState(157);
			match(T__1);
			setState(158);
			simulation_body();
			setState(159);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simulation_bodyContext extends ParserRuleContext {
		public List<Physics_moduleContext> physics_module() {
			return getRuleContexts(Physics_moduleContext.class);
		}
		public Physics_moduleContext physics_module(int i) {
			return getRuleContext(Physics_moduleContext.class,i);
		}
		public Simulation_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simulation_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterSimulation_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitSimulation_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitSimulation_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simulation_bodyContext simulation_body() throws RecognitionException {
		Simulation_bodyContext _localctx = new Simulation_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simulation_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 567367503594576L) != 0)) {
				{
				{
				setState(161);
				physics_module();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Physics_moduleContext extends ParserRuleContext {
		public CollisionContext collision() {
			return getRuleContext(CollisionContext.class,0);
		}
		public Electrostatic_fieldContext electrostatic_field() {
			return getRuleContext(Electrostatic_fieldContext.class,0);
		}
		public Drag_forceContext drag_force() {
			return getRuleContext(Drag_forceContext.class,0);
		}
		public Attraction_forceContext attraction_force() {
			return getRuleContext(Attraction_forceContext.class,0);
		}
		public WaveContext wave() {
			return getRuleContext(WaveContext.class,0);
		}
		public Uniform_motionContext uniform_motion() {
			return getRuleContext(Uniform_motionContext.class,0);
		}
		public Accelerated_motionContext accelerated_motion() {
			return getRuleContext(Accelerated_motionContext.class,0);
		}
		public Circular_motionContext circular_motion() {
			return getRuleContext(Circular_motionContext.class,0);
		}
		public GravityContext gravity() {
			return getRuleContext(GravityContext.class,0);
		}
		public SpringContext spring() {
			return getRuleContext(SpringContext.class,0);
		}
		public PendulumContext pendulum() {
			return getRuleContext(PendulumContext.class,0);
		}
		public Rolling_uphillContext rolling_uphill() {
			return getRuleContext(Rolling_uphillContext.class,0);
		}
		public Physics_moduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_physics_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterPhysics_module(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitPhysics_module(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitPhysics_module(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Physics_moduleContext physics_module() throws RecognitionException {
		Physics_moduleContext _localctx = new Physics_moduleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_physics_module);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				collision();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				electrostatic_field();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(169);
				drag_force();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				attraction_force();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 5);
				{
				setState(171);
				wave();
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 6);
				{
				setState(172);
				uniform_motion();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 7);
				{
				setState(173);
				accelerated_motion();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 8);
				{
				setState(174);
				circular_motion();
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 9);
				{
				setState(175);
				gravity();
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 10);
				{
				setState(176);
				spring();
				}
				break;
			case T__41:
				enterOuterAlt(_localctx, 11);
				{
				setState(177);
				pendulum();
				}
				break;
			case T__48:
				enterOuterAlt(_localctx, 12);
				{
				setState(178);
				rolling_uphill();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CollisionContext extends ParserRuleContext {
		public Movers_listContext movers_list() {
			return getRuleContext(Movers_listContext.class,0);
		}
		public CollisionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collision; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterCollision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitCollision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitCollision(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CollisionContext collision() throws RecognitionException {
		CollisionContext _localctx = new CollisionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_collision);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__3);
			setState(182);
			match(T__1);
			setState(183);
			movers_list();
			setState(184);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Movers_listContext extends ParserRuleContext {
		public List<MoverContext> mover() {
			return getRuleContexts(MoverContext.class);
		}
		public MoverContext mover(int i) {
			return getRuleContext(MoverContext.class,i);
		}
		public Movers_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_movers_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterMovers_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitMovers_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitMovers_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Movers_listContext movers_list() throws RecognitionException {
		Movers_listContext _localctx = new Movers_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_movers_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(186);
				mover();
				}
				}
				setState(189); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MoverContext extends ParserRuleContext {
		public Mover_propertiesContext mover_properties() {
			return getRuleContext(Mover_propertiesContext.class,0);
		}
		public MoverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mover; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterMover(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitMover(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitMover(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoverContext mover() throws RecognitionException {
		MoverContext _localctx = new MoverContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mover);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(T__4);
			setState(192);
			match(T__1);
			setState(193);
			mover_properties();
			setState(194);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mover_propertiesContext extends ParserRuleContext {
		public Radius_exprContext radius_expr() {
			return getRuleContext(Radius_exprContext.class,0);
		}
		public Mass_exprContext mass_expr() {
			return getRuleContext(Mass_exprContext.class,0);
		}
		public Velocity_exprContext velocity_expr() {
			return getRuleContext(Velocity_exprContext.class,0);
		}
		public Position_exprContext position_expr() {
			return getRuleContext(Position_exprContext.class,0);
		}
		public Color_exprContext color_expr() {
			return getRuleContext(Color_exprContext.class,0);
		}
		public Mover_propertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mover_properties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).enterMover_properties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GravITyListener) ((GravITyListener)listener).exitMover_properties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GravITyVisitor) return ((GravITyVisitor<? extends T>)visitor).visitMover_properties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mover_propertiesContext mover_properties() throws RecognitionException {
		Mover_propertiesContext _localctx = new Mover_propertiesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mover_properties);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			radius_expr();
			setState(197);
			mass_expr();
			setState(198);
			velocity_expr();
			setState(199);
			position_expr();
			setState(200);
			color_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
